2006-05-17  Titus Brown  <t@issola.caltech.edu>

	* Fixed test breakage due to amazon.com DNS changes.

2006-05-15  Titus Brown  <t@issola.caltech.edu>

	* Bumped version number, fixed import order issue.

2006-05-11  Titus Brown  <t@issola.caltech.edu>

	* Added 'check_links' collecting behavior, 'report_bad_links' function.

	* Added debug logging to csv_iterate.

2006-05-08  Titus Brown  <t@issola.caltech.edu>

	* Added dirstack extension module

2006-05-07  Titus Brown  <t@issola.caltech.edu>

	* Fixed general https problem ('back' didn't work because the
	  response fp was 'close'd but not wrapped in addinfourl for
	  HTTPS URLs).  (re ARINC)

	* Fixed check_links problem with 'https:' URLs, refactored a tad.
	  (re ARINC)

	* Fixed wsgi_intercept generator problem, added test.

	* Fixed a reference to an absolute URL in the tests.

2006-04-29  Titus Brown  <t@issola.caltech.edu>

	* Added (re-added!?) test-wsgi-intercept.py test.

	* 'execute_string' no longer resets context, unlike 'execute_file'.

	* Fixed a few miscellaneous problems with argparse.get_args; added
	  optional 'require' argument to get_args.

	* added 'interactive' flag to twill.shell; turned off verbose
	  output for 'extend_with' command if not interactive.

2006-04-24  Titus Brown  <t@issola.caltech.edu>

	* Added csv_iterate module.

	* Fixed argparse to use $arg1...$argN instead of $arg0.

2006-04-23  Titus Brown  <t@issola.caltech.edu>

	* Fixed argparse to listen to arguments after '--' only.

	* Updated 'problems.txt' again with a Windows-specific 'tidy'
	  problem.  (aledain)

	* Refactored '_all_the_same...' code by moving it into utils.py.

	* browser.get_form() now checks for exact match to form ID.
	  (Uy Do)

	* browser.get_form_field() now checks for exact match to control ID
	  (Uy Do)

	* Updated ClientCookie to latest svn.

	* Added another weird form parsing error: </br> problems in forms.
	  (David Hancock)

	* Verified issue with ParseErrors caused by INPUTs in the wrong