@@ -75,6 +75,19 @@ The process cannot access the file because it is being used by another process.
 config use_tidy 0</blockquote>
 <p>(and report it to the list if this does or does not solve the problem!)</p>
 </div>
+<div class="section" id="sys-path-mangling">
+<h1><a name="sys-path-mangling">6. sys.path mangling</a></h1>
+<p>twill, on import, alters the Python <tt class="docutils literal"><span class="pre">sys.path</span></tt> by appending
+<tt class="docutils literal"><span class="pre">twill/extensions</span></tt> to sys.path and inserting
+<tt class="docutils literal"><span class="pre">twill/other_packages</span></tt> in the front of the module path.  This may
+cause problems with packages with conflicting names.</p>
+<p>In particular, other modules whose names &quot;shadow&quot; twill's included
+extensions will be imported instead of the included extensions.  Also,
+only twill's versions of pyparsing, mechanize, ClientForm, and
+ClientCookie will be import-able.</p>
+<p>There is no good, simple way to get around this; setuptools may be our
+only hope.</p>
+</div>
 </div>
 </body>
 </html>
